# diff-kit

./: .gitignore  README.md  pyproject.toml  setup.py
diff_kit/: __init__.py
diff_kit/db_diff/: __init__.py
diff_kit/db_diff/core/: __init__.py  compare_data.py  results.py
diff_kit/db_diff/db_engine/: __init__.py  abc.py  exception.py  mysql.py  pgsql.py
diff_kit/db_diff/report/: __init__.py  excel_report.py  report_factory.py  text_report.py
diff_kit/tests/: __init__.py  db_diff.py
diff_kit/utils/: __init__.py  logger.py
